<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="@color/textColor">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/signUp"
            android:textSize="30sp"
            style="@style/logInTextColor"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logbg"
            android:orientation="vertical"
            android:paddingVertical="40dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:id="@+id/logoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/shopeasy_logo"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="16dp"
                android:paddingHorizontal="30dp">
                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputFilledStyle"
                    android:id="@+id/usernameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:startIconDrawable="@drawable/ic_person_pin"
                    app:endIconMode="clear_text"
                    app:hintEnabled="true"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signUpUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:paddingStart="48dp"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputFilledStyle"
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    app:endIconMode="clear_text"
                    app:hintEnabled="true"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signUpEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:paddingStart="48dp"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputFilledStyle"
                    android:id="@+id/passwordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:startIconDrawable="@drawable/ic_account_lock"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="true"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:paddingStart="48dp"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    style="@style/ButtonStyle"
                    android:textColor="@color/toolbarColorLight"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/signUpBtn"
                    android:id="@+id/signUpButton"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    app:cornerRadius = "20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logInRedirectText"
                    android:text="@string/isMember"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>