<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/indicators_box">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ScreenBackgroundColor"
            android:id="@+id/dialogBox">

            <TextView
                android:id="@+id/forgotTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lavender_round"
                android:drawableLeft="@drawable/ic_lock_check"
                android:drawablePadding="8dp"
                android:padding="10dp"
                android:text="@string/id_verify"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />
            <TextView
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desc"
                android:text="@string/id_verify_massage"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/forgotTitle"
                app:layout_constraintBottom_toTopOf="@id/passwordTextInputLayout"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                android:hint="@string/id_verify_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotTitle">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textColor"
                    android:id="@+id/passwordBox"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:padding="8dp"
                    android:textSize="14sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnCancel"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cancel"
                android:textColor="@color/toolbarColorLight"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/dialogBox"
                app:layout_constraintEnd_toStartOf="@id/btnCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

            <Button
                android:id="@+id/btnCheck"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/id_verify_ok"
                android:textColor="@color/toolbarColorLight"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/dialogBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>