<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="start"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <!-- Bottom sheet contents. -->
    <LinearLayout
        style="@style/BottomSheetBackgroundStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/favorLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="32dp"
                android:layout_height="28dp">
                <ImageButton
                    android:id="@+id/favorImageButton"
                    android:background="@drawable/round_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_collection_empty"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection"
                android:textSize="10sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cartLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="32dp"
                android:layout_height="28dp">
                <ImageButton
                    android:id="@+id/cartImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bg"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_cart_empty"/>
                <TextView
                    android:id="@+id/quantityText"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cart_badges"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textColor="@color/toolbarColorLight"
                    android:text="0"
                    android:textSize="10sp"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textSize="10sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itemButtonLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/inputCartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="122dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/toolbarColorLight"
                android:text="@string/addToCart"
                android:textSize="12sp"/>
            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="122dp"
                android:backgroundTint="@color/favoriteColor"
                android:textColor="@color/toolbarColorLight"
                android:text="@string/buyButton"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>